--- a/productos.html
+++ b/productos.html
@@ -7,7 +7,7 @@
     <title>Productos</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="scss/estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <!--SEO Palabras clave - KEYWORDS -->
     <meta name="keyword" content="Apple, tecnología, celular, computadora, Mac, Reloj">
     <meta name="description" content="Catalogo de productos Apple"> 
